.antlr/PDDLParser.java
// Generated from /home/lesire/Work/HierarchicalPlanning/pddl-python/PDDL.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PDDLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LP=1, RP=2, OF=3, EQUALS=4, DEFINE=5, DOMAIN=6, PROBLEM=7, DDOMAIN=8, 
		REQUIREMENTS=9, TYPES=10, CONSTANTS=11, PREDICATES=12, OBJECTS=13, INIT=14, 
		GOAL=15, ACTION=16, PARAMETERS=17, PRECONDITION=18, EFFECT=19, OBSERVE=20, 
		TASK=21, METHOD=22, ORDERED=23, SUBTASKS=24, ORDERING=25, CONSTRAINTS=26, 
		HTN=27, BEFORE=28, NOT=29, AND=30, FORALL=31, WHEN=32, EITHER=33, UNKNOWN=34, 
		OR=35, ONEOF=36, REQUIRE_KEY=37, NAME=38, VARIABLE=39, NUMBER=40, LINE_COMMENT=41, 
		WHITESPACE=42;
	public static final int
		RULE_pddl = 0, RULE_domain = 1, RULE_requireDef = 2, RULE_typesDef = 3, 
		RULE_typedList = 4, RULE_constantsDef = 5, RULE_typedObjList = 6, RULE_predicatesDef = 7, 
		RULE_predicateDef = 8, RULE_typedVarList = 9, RULE_structureDef = 10, 
		RULE_actionDef = 11, RULE_goalDef = 12, RULE_effectDef = 13, RULE_cEffect = 14, 
		RULE_condEffect = 15, RULE_observeDef = 16, RULE_literal = 17, RULE_atomicFormula = 18, 
		RULE_term = 19, RULE_taskDef = 20, RULE_methodDef = 21, RULE_taskNetworkDef = 22, 
		RULE_subtasksDef = 23, RULE_subtaskDef = 24, RULE_orderingDefs = 25, RULE_orderingDef = 26, 
		RULE_constraintDefs = 27, RULE_constraintDef = 28, RULE_problem = 29, 
		RULE_objectDeclaration = 30, RULE_init = 31, RULE_initEl = 32, RULE_goal = 33, 
		RULE_htnDef = 34, RULE_nameDef = 35;
	private static String[] makeRuleNames() {
		return new String[] {
			"pddl", "domain", "requireDef", "typesDef", "typedList", "constantsDef", 
			"typedObjList", "predicatesDef", "predicateDef", "typedVarList", "structureDef", 
			"actionDef", "goalDef", "effectDef", "cEffect", "condEffect", "observeDef", 
			"literal", "atomicFormula", "term", "taskDef", "methodDef", "taskNetworkDef", 
			"subtasksDef", "subtaskDef", "orderingDefs", "orderingDef", "constraintDefs", 
			"constraintDef", "problem", "objectDeclaration", "init", "initEl", "goal", 
			"htnDef", "nameDef"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'-'", "'='", "'define'", "'domain'", "'problem'", 
			"':domain'", "':requirements'", "':types'", "':constants'", "':predicates'", 
			"':objects'", "':init'", "':goal'", "':action'", "':parameters'", "':precondition'", 
			"':effect'", "':observe'", "':task'", "':method'", null, null, null, 
			"':constraints'", "':htn'", "'<'", "'not'", "'and'", "'forall'", "'when'", 
			"'either'", "'unknown'", "'or'", "'oneof'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "LP", "RP", "OF", "EQUALS", "DEFINE", "DOMAIN", "PROBLEM", "DDOMAIN", 
			"REQUIREMENTS", "TYPES", "CONSTANTS", "PREDICATES", "OBJECTS", "INIT", 
			"GOAL", "ACTION", "PARAMETERS", "PRECONDITION", "EFFECT", "OBSERVE", 
			"TASK", "METHOD", "ORDERED", "SUBTASKS", "ORDERING", "CONSTRAINTS", "HTN", 
			"BEFORE", "NOT", "AND", "FORALL", "WHEN", "EITHER", "UNKNOWN", "OR", 
			"ONEOF", "REQUIRE_KEY", "NAME", "VARIABLE", "NUMBER", "LINE_COMMENT", 
			"WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PDDL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PDDLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class PddlContext extends ParserRuleContext {
		public DomainContext domain() {
			return getRuleContext(DomainContext.class,0);
		}
		public ProblemContext problem() {
			return getRuleContext(ProblemContext.class,0);
		}
		public PddlContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pddl; }
	}

	public final PddlContext pddl() throws RecognitionException {
		PddlContext _localctx = new PddlContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_pddl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(72);
				domain();
				}
				break;
			case 2:
				{
				setState(73);
				problem();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DomainContext extends ParserRuleContext {
		public Token name;
		public RequireDefContext requirements;
		public TypesDefContext types;
		public ConstantsDefContext constants;
		public PredicatesDefContext predicates;
		public StructureDefContext structureDef;
		public List<StructureDefContext> operators = new ArrayList<StructureDefContext>();
		public List<TerminalNode> LP() { return getTokens(PDDLParser.LP); }
		public TerminalNode LP(int i) {
			return getToken(PDDLParser.LP, i);
		}
		public TerminalNode DEFINE() { return getToken(PDDLParser.DEFINE, 0); }
		public TerminalNode DOMAIN() { return getToken(PDDLParser.DOMAIN, 0); }
		public List<TerminalNode> RP() { return getTokens(PDDLParser.RP); }
		public TerminalNode RP(int i) {
			return getToken(PDDLParser.RP, i);
		}
		public TerminalNode NAME() { return getToken(PDDLParser.NAME, 0); }
		public List<RequireDefContext> requireDef() {
			return getRuleContexts(RequireDefContext.class);
		}
		public RequireDefContext requireDef(int i) {
			return getRuleContext(RequireDefContext.class,i);
		}
		public List<TypesDefContext> typesDef() {
			return getRuleContexts(TypesDefContext.class);
		}
		public TypesDefContext typesDef(int i) {
			return getRuleContext(TypesDefContext.class,i);
		}
		public List<ConstantsDefContext> constantsDef() {
			return getRuleContexts(ConstantsDefContext.class);
		}
		public ConstantsDefContext constantsDef(int i) {
			return getRuleContext(ConstantsDefContext.class,i);
		}
		public List<PredicatesDefContext> predicatesDef() {
			return getRuleContexts(PredicatesDefContext.class);
		}
		public PredicatesDefContext predicatesDef(int i) {
			return getRuleContext(PredicatesDefContext.class,i);
		}
		public List<StructureDefContext> structureDef() {
			return getRuleContexts(StructureDefContext.class);
		}
		public StructureDefContext structureDef(int i) {
			return getRuleContext(StructureDefContext.class,i);
		}
		public DomainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_domain; }
	}

	public final DomainContext domain() throws RecognitionException {
		DomainContext _localctx = new DomainContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_domain);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(LP);
			setState(77);
			match(DEFINE);
			setState(78);
			match(LP);
			setState(79);
			match(DOMAIN);
			setState(80);
			((DomainContext)_localctx).name = match(NAME);
			setState(81);
			match(RP);
			setState(88);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(86);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						setState(82);
						((DomainContext)_localctx).requirements = requireDef();
						}
						break;
					case 2:
						{
						setState(83);
						((DomainContext)_localctx).types = typesDef();
						}
						break;
					case 3:
						{
						setState(84);
						((DomainContext)_localctx).constants = constantsDef();
						}
						break;
					case 4:
						{
						setState(85);
						((DomainContext)_localctx).predicates = predicatesDef();
						}
						break;
					}
					} 
				}
				setState(90);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			setState(94);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LP) {
				{
				{
				setState(91);
				((DomainContext)_localctx).structureDef = structureDef();
				((DomainContext)_localctx).operators.add(((DomainContext)_localctx).structureDef);
				}
				}
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(97);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RequireDefContext extends ParserRuleContext {
		public Token REQUIRE_KEY;
		public List<Token> keys = new ArrayList<Token>();
		public TerminalNode LP() { return getToken(PDDLParser.LP, 0); }
		public TerminalNode REQUIREMENTS() { return getToken(PDDLParser.REQUIREMENTS, 0); }
		public TerminalNode RP() { return getToken(PDDLParser.RP, 0); }
		public List<TerminalNode> REQUIRE_KEY() { return getTokens(PDDLParser.REQUIRE_KEY); }
		public TerminalNode REQUIRE_KEY(int i) {
			return getToken(PDDLParser.REQUIRE_KEY, i);
		}
		public RequireDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requireDef; }
	}

	public final RequireDefContext requireDef() throws RecognitionException {
		RequireDefContext _localctx = new RequireDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_requireDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			match(LP);
			setState(100);
			match(REQUIREMENTS);
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(101);
				((RequireDefContext)_localctx).REQUIRE_KEY = match(REQUIRE_KEY);
				((RequireDefContext)_localctx).keys.add(((RequireDefContext)_localctx).REQUIRE_KEY);
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==REQUIRE_KEY );
			setState(106);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypesDefContext extends ParserRuleContext {
		public TypedListContext types;
		public TerminalNode LP() { return getToken(PDDLParser.LP, 0); }
		public TerminalNode TYPES() { return getToken(PDDLParser.TYPES, 0); }
		public TerminalNode RP() { return getToken(PDDLParser.RP, 0); }
		public TypedListContext typedList() {
			return getRuleContext(TypedListContext.class,0);
		}
		public TypesDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typesDef; }
	}

	public final TypesDefContext typesDef() throws RecognitionException {
		TypesDefContext _localctx = new TypesDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typesDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(LP);
			setState(109);
			match(TYPES);
			setState(110);
			((TypesDefContext)_localctx).types = typedList();
			setState(111);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedListContext extends ParserRuleContext {
		public Token NAME;
		public List<Token> types = new ArrayList<Token>();
		public Token supertype;
		public TerminalNode OF() { return getToken(PDDLParser.OF, 0); }
		public TypedListContext typedList() {
			return getRuleContext(TypedListContext.class,0);
		}
		public List<TerminalNode> NAME() { return getTokens(PDDLParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(PDDLParser.NAME, i);
		}
		public TypedListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedList; }
	}

	public final TypedListContext typedList() throws RecognitionException {
		TypedListContext _localctx = new TypedListContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_typedList);
		int _la;
		try {
			setState(127);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(114); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(113);
					((TypedListContext)_localctx).NAME = match(NAME);
					((TypedListContext)_localctx).types.add(((TypedListContext)_localctx).NAME);
					}
					}
					setState(116); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NAME );
				setState(118);
				match(OF);
				setState(119);
				((TypedListContext)_localctx).supertype = match(NAME);
				setState(120);
				typedList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NAME) {
					{
					{
					setState(121);
					((TypedListContext)_localctx).NAME = match(NAME);
					((TypedListContext)_localctx).types.add(((TypedListContext)_localctx).NAME);
					}
					}
					setState(126);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantsDefContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(PDDLParser.LP, 0); }
		public TerminalNode CONSTANTS() { return getToken(PDDLParser.CONSTANTS, 0); }
		public TypedObjListContext typedObjList() {
			return getRuleContext(TypedObjListContext.class,0);
		}
		public TerminalNode RP() { return getToken(PDDLParser.RP, 0); }
		public ConstantsDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantsDef; }
	}

	public final ConstantsDefContext constantsDef() throws RecognitionException {
		ConstantsDefContext _localctx = new ConstantsDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constantsDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(LP);
			setState(130);
			match(CONSTANTS);
			setState(131);
			typedObjList();
			setState(132);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedObjListContext extends ParserRuleContext {
		public Token NAME;
		public List<Token> names = new ArrayList<Token>();
		public Token objtype;
		public TerminalNode OF() { return getToken(PDDLParser.OF, 0); }
		public TypedObjListContext typedObjList() {
			return getRuleContext(TypedObjListContext.class,0);
		}
		public List<TerminalNode> NAME() { return getTokens(PDDLParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(PDDLParser.NAME, i);
		}
		public TypedObjListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedObjList; }
	}

	public final TypedObjListContext typedObjList() throws RecognitionException {
		TypedObjListContext _localctx = new TypedObjListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typedObjList);
		int _la;
		try {
			setState(148);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(134);
					((TypedObjListContext)_localctx).NAME = match(NAME);
					((TypedObjListContext)_localctx).names.add(((TypedObjListContext)_localctx).NAME);
					}
					}
					setState(137); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==NAME );
				setState(139);
				match(OF);
				setState(140);
				((TypedObjListContext)_localctx).objtype = match(NAME);
				setState(141);
				typedObjList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NAME) {
					{
					{
					setState(142);
					((TypedObjListContext)_localctx).NAME = match(NAME);
					((TypedObjListContext)_localctx).names.add(((TypedObjListContext)_localctx).NAME);
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicatesDefContext extends ParserRuleContext {
		public TerminalNode LP() { return getToken(PDDLParser.LP, 0); }
		public TerminalNode PREDICATES() { return getToken(PDDLParser.PREDICATES, 0); }
		public TerminalNode RP() { return getToken(PDDLParser.RP, 0); }
		public List<PredicateDefContext> predicateDef() {
			return getRuleContexts(PredicateDefContext.class);
		}
		public PredicateDefContext predicateDef(int i) {
			return getRuleContext(PredicateDefContext.class,i);
		}
		public PredicatesDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicatesDef; }
	}

	public final PredicatesDefContext predicatesDef() throws RecognitionException {
		PredicatesDefContext _localctx = new PredicatesDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_predicatesDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(LP);
			setState(151);
			match(PREDICATES);
			setState(153); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(152);
				predicateDef();
				}
				}
				setState(155); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==LP );
			setState(157);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateDefContext extends ParserRuleContext {
		public NameDefContext predicate;
		public TerminalNode LP() { return getToken(PDDLParser.LP, 0); }
		public TypedVarListContext typedVarList() {
			return getRuleContext(TypedVarListContext.class,0);
		}
		public TerminalNode RP() { return getToken(PDDLParser.RP, 0); }
		public NameDefContext nameDef() {
			return getRuleContext(NameDefContext.class,0);
		}
		public PredicateDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicateDef; }
	}

	public final PredicateDefContext predicateDef() throws RecognitionException {
		PredicateDefContext _localctx = new PredicateDefContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_predicateDef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(159);
			match(LP);
			setState(160);
			((PredicateDefContext)_localctx).predicate = nameDef();
			setState(161);
			typedVarList();
			setState(162);
			match(RP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypedVarListContext extends ParserRuleContext {
		public Token VARIABLE;
		public List<Token> names = new ArrayList<Token>();
		public Token vartype;
		public TerminalNode OF() { return getToken(PDDLParser.OF, 0); }
		public TypedVarListContext typedVarList() {
			return getRuleContext(TypedVarListContext.class,0);
		}
		public TerminalNode NAME() { return getToken(PDDLParser.NAME, 0); }
		public List<TerminalNode> VARIABLE() { return getTokens(PDDLParser.VARIABLE); }
		public TerminalNode VARIABLE(int i) {
			return getToken(PDDLParser.VARIABLE, i);
		}
		public TypedVarListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typedVarList; }
	}

	public final TypedVarListContext typedVarList() throws RecognitionException {
		TypedVarListContext _localctx = new TypedVarListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_typedVarList);
		int _la;
		try {
			setState(178);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(165); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(164);
					((TypedVarListContext)_localctx).VARIABLE = match(VARIABLE);
					((TypedVarListContext)_localctx).names.add(((TypedVarListContext)_localctx).VARIABLE);
					}
					}
					setState(167); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==VARIABLE );
				setState(169);
				match(OF);
				setState(170);
				((TypedVarListContext)_localctx).vartype = match(NAME);
				setState(171);
				typedVarList();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(175);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==VARIABLE) {
					{
					{
					setState(172);
					((TypedVarListContext)_localctx).VARIABLE = match(VARIABLE);
					((TypedVarListContext)_localctx).names.add(((TypedVarListContext)_localctx).VARIABLE);
					}
					}
					setState(177);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructureDefContext extends ParserRuleContext {
		public ActionDefContext actionDef() {
			return getRuleContext(ActionDefContext.class,0);
		}
		public TaskDefContext taskDef() {
			return getRuleContext(TaskDefContext.class,0);
		}
		public MethodDefContext methodDef() {
			return getRuleContext(MethodDefContext.class,0);
		}
		public StructureDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_structureDef; }
	}

	public final StructureDefContext structureDef() throws RecognitionException {
		StructureDefContext _localctx = new StructureDefContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_structureDef);
		try {
			setState(183);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				actionDef();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				taskDef();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(182);
				methodDef();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
